tests/snapshots/cli_behavioral__no_selector_extracts_full_page.snap
---
source: crates/rust_scraper_core/../../tests/cli_behavioral_test.rs
expression: redacted
---
---
title: 'Document: [127.0.0.1]'
url: http://127.0.0.1:<PORT>/
date: [DATE]
excerpt: All content should appear when no selector is specified.
---

## Full Page Test

All content should appear when no selector is specified.
