tests/snapshots/cli_behavioral__obsidian_tags_appear_in_frontmatter.snap
---
source: crates/webfang_core/../../tests/cli_behavioral_test.rs
expression: redacted
---
---
title: Tagged Page
url: http://127.0.0.1:<PORT>/
date: [DATE]
excerpt: Content with obsidian tags.
tags:
- scraped
- web-dev
- rust
---

Content with obsidian tags.
