tests/snapshots/cli_behavioral__obsidian_wiki_links_conversion.snap
---
source: crates/webfang_core/../../tests/cli_behavioral_test.rs
expression: redacted
---
---
title: Wiki Links Test
url: http://127.0.0.1:<PORT>/
date: [DATE]
excerpt: Check out this other page for more info.
---

Check out [[other-page|this other page]] for more info.
