tests/snapshots/cli_behavioral__selector_h3_extracts_only_h3.snap
---
source: crates/rust_scraper_core/../../tests/cli_behavioral_test.rs
expression: redacted
---
---
title: 'Document: [127.0.0.1]'
url: http://127.0.0.1:<PORT>/
date: [DATE]
---

### Section One

### Section Two
