tests/snapshots/cli_behavioral__selector_table_extracts_table.snap
---
source: crates/webfang_core/../../tests/cli_behavioral_test.rs
expression: redacted
---
---
title: 'Document: [127.0.0.1]'
url: http://127.0.0.1:<PORT>/
date: [DATE]
---

Row1Col1

Row1Col2
